src/objects/ManualTicketCount__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <formula>Comps__c +  Holds__c +  Kills__c +  Open__c +  TicketCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comps__c</fullName>
        <label>Comps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Manual Ticket Counts</relationshipLabel>
        <relationshipName>ManualTicketCounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GrossSales__c</fullName>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holds__c</fullName>
        <label>Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kills__c</fullName>
        <label>Kills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TicketCount__c</fullName>
        <label>Ticket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TicketSalesDate__c</fullName>
        <label>Ticket Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fxGrossSales__c</fullName>
        <formula>(GrossSales__c / (EventDateTime__r.Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Manual Ticket Count</label>
    <nameField>
        <displayFormat>MTC-{000000}</displayFormat>
        <label>Manual Ticket Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Ticket Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>